--- a/GitDemo1/GitDemo1/GitDemo1.csproj
+++ b/GitDemo1/GitDemo1/GitDemo1.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClassA.cs" />
+    <Compile Include="ClassDev1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
