--- a/GitDemo1/GitDemo1/GitDemo1.csproj
+++ b/GitDemo1/GitDemo1/GitDemo1.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class Dev2.cs" />
     <Compile Include="ClassA.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
